; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/openbsm/bin/auditfilterd/extr_auditfilterd_conf.c_auditfilter_module_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/openbsm/bin/auditfilterd/extr_auditfilterd_conf.c_auditfilter_module_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.auditfilter_module = type { i32*, i32*, i32 (%struct.auditfilter_module*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.auditfilter_module*)* @auditfilter_module_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @auditfilter_module_detach(%struct.auditfilter_module* %0) #0 {
  %2 = alloca %struct.auditfilter_module*, align 8
  store %struct.auditfilter_module* %0, %struct.auditfilter_module** %2, align 8
  %3 = load %struct.auditfilter_module*, %struct.auditfilter_module** %2, align 8
  %4 = getelementptr inbounds %struct.auditfilter_module, %struct.auditfilter_module* %3, i32 0, i32 2
  %5 = load i32 (%struct.auditfilter_module*)*, i32 (%struct.auditfilter_module*)** %4, align 8
  %6 = icmp ne i32 (%struct.auditfilter_module*)* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load %struct.auditfilter_module*, %struct.auditfilter_module** %2, align 8
  %9 = getelementptr inbounds %struct.auditfilter_module, %struct.auditfilter_module* %8, i32 0, i32 2
  %10 = load i32 (%struct.auditfilter_module*)*, i32 (%struct.auditfilter_module*)** %9, align 8
  %11 = load %struct.auditfilter_module*, %struct.auditfilter_module** %2, align 8
  %12 = call i32 %10(%struct.auditfilter_module* %11)
  br label %13

13:                                               ; preds = %7, %1
  %14 = load %struct.auditfilter_module*, %struct.auditfilter_module** %2, align 8
  %15 = getelementptr inbounds %struct.auditfilter_module, %struct.auditfilter_module* %14, i32 0, i32 1
  store i32* null, i32** %15, align 8
  %16 = load %struct.auditfilter_module*, %struct.auditfilter_module** %2, align 8
  %17 = getelementptr inbounds %struct.auditfilter_module, %struct.auditfilter_module* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @dlclose(i32* %18)
  %20 = load %struct.auditfilter_module*, %struct.auditfilter_module** %2, align 8
  %21 = getelementptr inbounds %struct.auditfilter_module, %struct.auditfilter_module* %20, i32 0, i32 0
  store i32* null, i32** %21, align 8
  ret void
}

declare dso_local i32 @dlclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
